@@ -73,6 +73,6 @@ DIST netbeans-websvc-6.0.tar.bz2 21262337 RMD160 aa0eea92a59cad8c5907c9a5be41a1a
 DIST netbeans-xml-6.0.tar.bz2 4404173 RMD160 6360765b44e988fb1ad4e529630ac1abbc4dae9d SHA1 92f489b03154a8153f8508387886afb9fbfa1959 SHA256 5d63287da3cfc42cbfb24ab619d1e96ff625124e1225c5377aa5d8c22deaecd9
 EBUILD netbeans-6.0.ebuild 32690 RMD160 53bf60c90e06f5fbb4b08a2363e750abf0a1b563 SHA1 9725266d8090a628691fa55fa179d5f8c72a3799 SHA256 a663b402ecd295ed316307b1be3772781e9f87c4013f6b1670a1ce1ca99d7669
 EBUILD netbeans-6.1-r1.ebuild 16545 RMD160 ae5471ae840869fbc962fceb48f8ee811efae729 SHA1 d4782ff9271907bbb98e64029be47bfce3d8677a SHA256 b5ffe94c7e7f66a7981c076c54fdc847a5773f4cf890c789935fbaee07299c2e
-EBUILD netbeans-6.5_beta.ebuild 24085 RMD160 e3b1babd00ab06078f2a8fe0079109aa0b9d32f0 SHA1 bcf6fe561048cef826540c0e198da5083b3ccf0e SHA256 7149b9410609d4cb883ceb0fffac2da9a496e8af0e77387e74fc40996afd8f29
-MISC ChangeLog 24766 RMD160 5bf5bd27672bd4e3b41fb70150f0b938f1c1ef01 SHA1 d1a0427e155c0d18c3386c48fd9e4c2e47146cf7 SHA256 ac57d93ff3927d001122ab6539c69ad41a7153bdbdf89c15987bf9b8fa3cb702
+EBUILD netbeans-6.5_beta.ebuild 27925 RMD160 3a5cc3fa19913c5af2c2843600b3a42fd23c08ff SHA1 05f8b53b268ea125516e2289ae79d1a0617c574f SHA256 3ce63cfc47ca7659a8fa6dc48dcd34a1551c6bf551e48ce03853fd28083cf2c0
+MISC ChangeLog 24877 RMD160 e2f5eafae8e471c05efa6fad572a2c86da385d04 SHA1 684556d0ca96472fc8ba1e6b38e20f8527b38900 SHA256 d4236f7a85f337cc1e65c6ce1a8584bc33591af12b6d59106f016f6a4fbdb1a2
 MISC metadata.xml 1128 RMD160 9ba1b3fec0fedacd10416e7c61edfecada1912cd SHA1 997b3db42167a9e591c3667ffddd125bbb85fa98 SHA256 8c524b060fdbfc4aa432a528c2e78ad05eb20fcf4bc8973c1c8366699bb90b5a
